# spine-classifier-pt-sky

./: .gitignore  LICENSE  Makefile  README.md  main.py  pyproject.toml  requirements.txt  train.py
infra/: sky-spine-uv.yaml
